kubernetes-cluster-setup/kind/manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo
  labels:
    app.kubernetes.io/part-of: kind-single-node-lab
